--- a/package.json
+++ b/package.json
@@ -6,10 +6,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "awesome-react-icons": "^1.4.5",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "popper.js": "^1.16.1",
+    "propper": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-minimal-side-navigation": "^1.5.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "thunk": "0.0.1",
+    "web-vitals": "^0.2.4",
+    "wouter": "^2.7.0-alpha.1"
   },
   "scripts": {
     "start": "react-scripts start",
