--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
-    "materialize-css": "^1.0.0-rc.2",
     "popper.js": "^1.16.1",
     "propper": "^1.0.3",
     "react": "^17.0.1",
@@ -21,9 +20,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
-    "thunk": "0.0.1",
-    "web-vitals": "^0.2.4",
-    "wouter": "^2.7.0-alpha.1"
+    "thunk": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
