--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "axios-progress-bar": "^1.2.0",
     "bootstrap": "^4.5.3",
     "crypto-js": "^4.0.0",
     "jquery": "^3.5.1",
@@ -21,7 +22,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
-    "thunk": "0.0.1"
+    "thunk": "0.0.1",
+    "use-axios-progress-bar": "^1.0.2"
   },
   "homepage": "http://is93.aloeadan.com",
   "scripts": {
