--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
-    "axios-progress-bar": "^1.2.0",
+ 
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "caniuse-lite": "^1.0.30001237",
     "crypto-js": "^4.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
@@ -22,8 +20,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
-    "thunk": "0.0.1",
-    "use-axios-progress-bar": "^1.0.2"
+    "thunk": "0.0.1"
   },
   "homepage": "http://is93.aloeadan.com",
   "scripts": {
